--- a/backend/package.json
+++ b/backend/package.json
@@ -10,17 +10,21 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.8",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
     "json-server": "^1.0.0-beta.3",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.0",
+    "qs": "^6.13.1",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
