--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test jest"
+    "test": "NODE_ENV=test vitest"
   },
   "keywords": [],
   "author": "",
@@ -18,13 +18,15 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
+    "jest-mock-extended": "^4.0.0-beta1",
     "json-server": "^1.0.0-beta.3",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.0",
     "qs": "^6.13.1",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.20",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "vitest": "^2.1.8"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
