Se ha cambiado backend Javascript por Backend Typescript y se han incorporado mejoras en frontend

--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,8 @@
 /frontend/.vite/
 /backend-ts/.vite/
 /backend-ts/.idea/
+/backend/data/
+/backend/docker-init/
 
 # Archivos de logs globales
 logs
