--- a/backend/package.json
+++ b/backend/package.json
@@ -1,37 +1,47 @@
 {
-  "name": "previplus-backend",
+  "name": "backend-ts-last",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test vitest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "dev": "ts-node-dev --respawn --clear src/app.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^22.10.2",
+    "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.7.2"
+  },
   "dependencies": {
-    "axios": "^1.7.8",
+    "@types/cookie-parser": "^1.4.8",
     "bcrypt": "^5.1.1",
+    "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "crypto-js": "^4.2.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "express-validator": "^7.2.0",
-    "jest-mock-extended": "^4.0.0-beta1",
-    "json-server": "^1.0.0-beta.3",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.13.0",
-    "qs": "^6.13.1",
-    "reflect-metadata": "^0.2.2",
+    "morgan": "^1.10.0",
+    "pg": "^8.13.1",
     "typeorm": "^0.3.20",
-    "uuid": "^11.0.3",
-    "vitest": "^2.1.8"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.5.14",
-    "jest": "^29.7.0",
-    "sqlite3": "^5.1.7",
-    "supertest": "^7.0.0"
+    "uuid": "^11.0.3"
   }
 }
