--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.13.1",
+    "ts-node": "^10.9.2",
     "typeorm": "^0.3.20",
     "uuid": "^11.0.3"
   }
