--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,14 +24,14 @@ services:
     restart: always
     container_name: previplus-backend
     environment:
-      NODE_ENV: production
+      NODE_ENV: prod
       DB_HOST: db
       DB_PORT: 5432
       DB_USER: namas
       DB_PASSWORD: namas
       DB_NAME: previplus
-    env_file:
-      - ./backend/.env
+      SECRET_WORD: testsecret
+    
     depends_on:
       - db
     networks:
